--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Shopping Extensions",
+    "name": "Shopping Extension",
     "version": "1.0",
     "description": "Build an Extension!",
     "permissions": [ "<all_urls>","tabs"],
