--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -4,7 +4,7 @@
     "description": "Build an Extension!",
     "permissions": [ "<all_urls>","tabs"],
     "background": {
-      "scripts": ["jquery-3.4.1.min.js", "background.js"],
+      "scripts": ["background.js"],
       "persistent": false
     },
     "manifest_version": 2
