--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
   },
   "homepage": "https://github.com/DanielleZror/ShoppingExtensions#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "jquery": "^3.5.1",
-    "node": "^14.2.0",
-    "npm": "^6.14.5",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {}
 }
